--- a/src/containers/_vars.scss
+++ b/src/containers/_vars.scss
@@ -1,4 +1,7 @@
-// P=pressed, T=transparant, L=lighter, D=darker
+// P=pressed, T=transparant, L=lighter, D=darker, BG=background, W=width
+$cardW : 22em;
+$cardH: 9em;
+$cardFont: 1em;
 
 $color1 : rgb(33, 73, 53);
 $color2: rgb(82, 146, 122);
