--- a/src/containers/App.scss
+++ b/src/containers/App.scss
@@ -3,12 +3,15 @@
 @import './_vars'; /*scss vars & mixins initiated here*/
 
 .App {
-    background-color: $color6; //temp failsafe
+    background: $appBG; //temp failsafe
     @include browser-comp(background, $appBG);
+    display: flex;
+    flex-direction:column;
+    min-height: 100vh;
 }
 
 .HeaderBox {
-    background-color: $colorDark; //temp failsafe
+    background: $headerBG; //temp failsafe
     @include browser-comp(background, $headerBG);
     display: flex;
     height: 6rem;
@@ -82,6 +85,7 @@ input {
             border: none;
             box-shadow: none;
             color: $colorGreen;
+            background-color: $colorDark;
         }
     }
 
@@ -93,7 +97,7 @@ input {
         margin: auto 0;
         position: inherit;
         &:hover {
-            box-shadow:none;
+            box-shadow: none;
             border-color: $colorDark;
             background-color: $colorDark;
         }
@@ -103,8 +107,6 @@ input {
 .CardListBox {
     width: 97%;
     margin: auto;
-    padding: auto;
-    min-height:84vh;
     display: block;
     flex-direction: column;
     align-items: center;
@@ -121,72 +123,72 @@ input {
 .Card {
     background-color: $colorDarkT;
     color: $colorGrey; 
-    width: 22em;
-    height: 7.5em;
+    width: $cardW;
+    height: $cardH;
     margin: 0.4em;
     border-radius: 0.5em; 
-    display:flex;
+    display: flex;
+    font-size: $cardFont;
 
     img {
         opacity: 100%;
-        height: 7.5em;
-        width: 7.5em;
+        height: $cardH;
+        width: $cardH;
         border-top-left-radius:0.5em;
         border-bottom-left-radius: 0.5em;
-        opacity: 1; //some browser will inherit opacity of .DeadSign
     }
-}
 
-.CardInfo {
-    width: 22em - 7.5em; //card-img
-    padding: 0.4em;
-    display: flex;
-    flex-wrap: wrap;
-}
+    div {
+        padding: 0.3em 0.1em 0.2em 0.4em;
+        font-size: 1em;
+        display: flex;
+        flex-wrap:wrap;
 
-.Card h3 { //name
-    width: 100%;
-    height: auto;
-    margin: 0 auto;
-    color: $color4;
-}
+        i {
+            font-weight: 400;
+            font-size: 0.8em;
+            color: $colorGrey;
+        }
 
-.Card span {
-    font-weight: 500;
-    font-size: 0.9em;
-    color: $colorGrey;
-    display: inline-block;
-    font-style: italic;
-}
+        h3 { //name
+            margin: 0;
+            color: $color4;
+            width: $cardW - $cardH - 2em; //safe space
+        }
 
-.Card h4 {
-   color: $colorGreen;
-   margin: 0;
-   padding: 0;
-}
+        h4 {
+            color: $colorGreen;
+            margin: auto 0;
 
-.Card p {
-    width:250px;
-    display:block;
-    height:auto;
-    padding:0;
-    margin-bottom:0;
-    margin-top: auto;
-    font-size: 0.8em;
-    text-decoration-line: underline;
+            i {
+                font-size:0.9em;
+            }
+        }
 
-    span {
-        color: $color2;
-        font-size: 1.1em;
-        margin-left:5px;
-        margin-top: 1px;
+        p {
+            display:flex;
+            flex-direction: column;
+            align-self: flex-end;
+            margin-top:0;
+            margin-bottom: 0;
+            font-size: 0.8em;
+
+            i {
+                width: $cardW - $cardH;
+                color: $color2;
+                font-size: 1.1em;
+                margin-left:0.4em;
+                margin-top: 0.1em;
+               
+            }
+        }
     }
 }
 
 .DeadSign {
-    margin: 0.4em 4em;
-    width: 6em;
-    height: 6em;
+    margin: 0.1em 2.2em;
+    width: $cardH - 1em;
+    height: $cardH - 1em;
     border-color: $color2;
     background-color: $color2;
     border-radius: 50%;
@@ -204,10 +206,10 @@ input {
 
 .FooterBox {
     background-color: $colorDark;
-    bottom: 0;
-    height: auto;
+    width: 100%;
     padding: 1rem;
-    margin-top: 1rem;
+    margin-top: 0;
+    align-self: flex-end;
 }
 
 .FooterBox p {
