--- a/src/containers/_media.scss
+++ b/src/containers/_media.scss
@@ -10,6 +10,7 @@
     }
     .QuoteBox {
         flex-grow: 0;
+        width:auto;
         margin:auto 2em;
     }
     form {
@@ -30,6 +31,7 @@
         font-size: 1.2em;
         button, p {
             width: 6em;
+            background-color:red;
         }
     }
     .Card {
