--- a/src/containers/App.scss
+++ b/src/containers/App.scss
@@ -1,6 +1,25 @@
 /* SINCE ITS A SMALL APP IV DECIDED TO PUT ALL CSS IN 1 FILE EXCEPT FOR VARS & @MEDIA */
 
-@import './_vars'; /*scss vars & mixins initiated here*/
+@import './_vars'; /*scss vars initiated here*/
+
+@mixin default-ui {
+    padding: 0.2em;
+    height: 2.2em;
+    color: $color4; 
+    background-color: $colorDark;
+    border-color: $colorDark;
+    border-radius: 1.5em;
+    border-style: solid;
+    outline: none;
+    // &:hover {
+    //     background-color: $colorDarkP;
+    //     border-color: $color4;
+    //     box-shadow: inset  1px 1px 6px 1px ($color4);
+    // }
+    &:active {
+        background-color: $colorDarkP;
+    }
+}
 
 .App {
     background: -moz-radial-gradient(center, ellipse cover, $colorBG1  0%, $colorBG2 70%);
@@ -86,7 +105,8 @@ content {
     align-items: center;
     justify-content: space-between;
     // min-height: 38rem;
-    min-height: 90vh;
+    // min-height: 90vh;
+    height:auto;
 }
 
 .ChangePageBox {
