--- a/src/containers/App.scss
+++ b/src/containers/App.scss
@@ -70,11 +70,12 @@ select {
 
 input {
     @include default-ui;
-    @include browser-fix(border-top-right-radius, 0);
-    @include browser-fix(border-bottom-right-radius, 0);
+    // @include browser-fix(border-top-right-radius, 0);
+    // @include browser-fix(border-bottom-right-radius, 0);  
+    border-radius:0;
+    border-top-left-radius: 1.5em;
+    border-bottom-left-radius: 1.5em;
     width: 5rem;
-    // border-top-right-radius: 0em;
-    // border-bottom-right-radius: 0em;
     transition: width 0.3s ease-in-out;
     &:focus {
         width: 9rem;
