--- a/src/containers/_media.scss
+++ b/src/containers/_media.scss
@@ -10,8 +10,8 @@
     }
     .QuoteBox {
         flex-grow: 0;
-        width:auto;
-        margin:auto 2em;
+        width: 90vw;
+        margin:auto;
     }
     form {
         margin:0 auto;
