--- a/src/containers/_media.scss
+++ b/src/containers/_media.scss
@@ -1,7 +1,11 @@
-@media (max-width: 900px) {
 
+
+
+@media (min-width: 900px) {
+    content {
+        font-size: 1.1rem;
+    }
 }
-
 
 @media (max-width: 500px) {
     .HeaderBox {
