--- a/src/containers/_vars.scss
+++ b/src/containers/_vars.scss
@@ -43,6 +43,9 @@ $shadowDark : inset rgba(2, 29, 20, 0.842) 2px 2px 8px;
     &:active {
         background-color: $colorDarkP;
     }
+    &:hover {
+        cursor: pointer;
+    }
 }
 
 
