--- a/src/containers/App.scss
+++ b/src/containers/App.scss
@@ -1,5 +1,5 @@
 /* SINCE ITS A SMALL APP IV DECIDED TO PUT ALL CSS IN 1 FILE EXCEPT FOR VARS & @MEDIA */
-
+/* ALL MAIN PARTS  */
 @import './_vars'; /*scss vars and mixins initiated here*/
 
 
@@ -11,12 +11,32 @@
 }
 
 .HeaderBox {
+    height: 4rem;
+    padding: 0.5rem;
+    padding-left: 1rem;
+    background-color: $colorDark;
+    h1 {
+        font-size: 2.5em;
+        margin:auto;
+        color: $color5;
+        text-align: center;
+        font-family: $font1;
+        letter-spacing: 2px;
+        font-weight: 10;
+        &:hover {
+            color: $color4;
+        }
+    }
+}
+
+.Nav {
     background: -moz-linear-gradient(-45deg, $color6 20%,rgba(0, 0, 0, 0) 70%);
     background: -webkit-linear-gradient(-45deg, $color6 20%,rgba(0, 0, 0, 0) 70%);
     background: linear-gradient(170deg, $color6 20%,rgba(0, 0, 0, 0) 70%);
     display: flex;
     height: 6rem;
     padding: 1rem;
+    padding-left: 2rem;
 }
 
 .QuoteBox {
@@ -73,10 +93,10 @@ input { //[BUG]ios still makes right corners round :C
     border-radius:0;
     border-top-left-radius: 1.5em;
     border-bottom-left-radius: 1.5em;
-    width: 5rem;
+    width: 5em;
     transition: width 0.3s ease-in-out;
     &:focus {
-        width: 9rem;
+        width: 9em;
     }
 }
 
@@ -136,7 +156,7 @@ content {
 
     p {
         @include default-ui;
-        width: 5em;
+        width: 6em;
         padding-top: 0.3em;
         text-align: center;
         display: inline-block;
@@ -183,6 +203,8 @@ content {
         display: flex;
         flex-direction: column;
         justify-content: space-between;
+        font-family: 'Cousine', monospace;
+
 
         i { //default i
             //gender
@@ -235,7 +257,7 @@ content {
         }
     }
     .DeadSign {
-        margin: 0.1em 2.2em;
+        margin: 0.4em 2.4em;
         width: 7em;
         height: 7em;
         border-color: $color2 0.5;
