--- a/src/containers/_media.scss
+++ b/src/containers/_media.scss
@@ -1,18 +1,41 @@
 
 
 
-@media (min-width: 900px) {
-    content {
+@media (min-width: 1920px) {
+    content, form, .Nav {
+        font-size: 1.2rem;
+    }
+}
+
+@media (min-width: 1500px) {
+    content, form, .Nav {
         font-size: 1.1rem;
     }
 }
 
-@media (max-width: 500px) {
-    .HeaderBox {
+@media (max-width: 1000px) {
+    .Nav {
+        height: 8.5rem;
+    }
+}
+
+@media (max-width: 900px) {
+    .Nav {
+        height: 9.5rem;    
+    }
+    content, form, .Nav {
+        font-size: 0.95rem;
+    }
+
+}
+
+@media (max-width: 667px) {
+    
+    .Nav {
         flex-wrap: wrap;
         flex-direction: column;
         justify-content: center;
-        height: 9.5rem;
+        height: 10rem;
         font-size: 0.9rem;
         padding: 0.2rem;
         margin-top: 0.1rem;
@@ -31,18 +54,26 @@
             margin: 0;
         }
     }
+    .ChangePageBox {
+        margin: 0.2em auto;
+        width: 20em;
+        margin-top: 0.3em;
+        // font-size: 1em;
+    }   
+    content, .HeaderBox {
+        font-size: 0.85rem;
+    }
+}
+
+@media (max-width: 550px) {
+    input:focus {
+       width: 7em;
+    }
     content {
         width: 100%;
         font-size: 0.8rem;
     }
-    .ChangePageBox {
-        margin: 0.2em auto;
-        width: 20em;
-        font-size: 1em;
-        button, p {
-            width: 6em;
-        }
-    }
+    
     .Card {
         width: 85vw;
         font-size:0.8em;
@@ -51,12 +82,17 @@
         }
         .DeadSign {
             font-size: 0.8em;
-            right: 0;
+            margin-top: 0.2em;
+            right: 0.8em;
         }
-    }   
+    }
 }
+
 @media (max-width: 390px) {
-    .HeaderBox {
+    .Nav {
         height: 11rem;
+    }
+    content, .HeaderBox {
+        font-size: 0.7em;
     }
 }
