--- a/src/containers/_media.scss
+++ b/src/containers/_media.scss
@@ -2,13 +2,13 @@
 
 
 @media (min-width: 1920px) {
-    content, form, .Nav {
+    content, form, .Nav, header {
         font-size: 1.2rem;
     }
 }
 
 @media (min-width: 1500px) {
-    content, form, .Nav {
+    content, form, .Nav, header {
         font-size: 1.1rem;
     }
 }
@@ -37,14 +37,12 @@
         justify-content: center;
         height: 10rem;
         font-size: 0.9rem;
-        padding: 0.2rem;
-        margin-top: 0.1rem;
-        margin-bottom: 0;
+        padding: 0.2rem;    
     }
     .QuoteBox {
         flex-grow: 0;
         width: 90vw;
-        margin:auto;
+        margin: auto;
     }
     form {
         margin:0 auto;
@@ -60,7 +58,7 @@
         margin-top: 0.3em;
         // font-size: 1em;
     }   
-    content, .HeaderBox {
+    content, header {
         font-size: 0.85rem;
     }
 }
@@ -86,13 +84,16 @@
             right: 0.8em;
         }
     }
+    header {
+        font-size: 0.7rem;
+    }
 }
 
 @media (max-width: 390px) {
     .Nav {
         height: 11rem;
     }
-    content, .HeaderBox {
-        font-size: 0.7em;
+    content, header {
+        font-size: 0.6em;
     }
 }
